--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Apunts EDA"
-theme: just-the-docs
+theme: minima
 # Optional: navbar links (edit/remove as needed)
 # header_pages:
 #   - index.md
